# dots

./: .clippy.toml  .gitignore  .typos.toml  CHANGELOG.md  Cargo.toml  README.md  dist-workspace.toml  dots.toml  flake.nix  rust-toolchain.toml
.github/: dependabot.yaml
.github/workflows/: check.yml  dependabot.yml  lint_pr_title.yml  release.yml
src/: analysis.rs  cli.rs  config.rs  handle_world.rs  lib.rs  main.rs  output_path.rs  process.rs  stdx.rs  world.rs
src/io/: analysis.rs  mod.rs
tests/: lib.rs
wix/: main.wxs
