[package]
name = "dotfilers"
version = "0.1.0"
edition = "2024"

[dependencies]
anstyle = "1.0.11"
clap = { version = "4.5.40", features = ["derive"] }
color-eyre = "0.6.5"
commented = { version = "0.1.0", features = ["glob"] }
env_logger = "0.11.8"
etcetera = "0.10.0"
eyre = "0.6.12"
handlebars = "6.3.2"
interpolator = "0.5.0"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
sha256 = "1.6.0"
shellwords = "1.1.0"
simply_colored = "0.1.0"
tap = "1.0.1"
toml = "0.8.23"
ureq = "3.0.12"
walkdir = "2.5.0"
