[package]
name = "dots-bin"
description = "A cozy, simple-to-use dotfiles manager"
version = "0.2.1"
edition = "2024"
authors = ["Nik Revenco <pm@nikrev.com>"]
repository = "https://github.com/nik-rev/dots"
homepage = "https://github.com/nik-rev/dots"
license = "MIT OR Apache-2.0"
keywords = []
categories = []

[[bin]]
name = "dots"
path = "src/main.rs"

[lib]
name = "dots"

[package.metadata.wix]
upgrade-guid = "B7B1D28F-6AD7-4F72-84D5-1A6774502814"
path-guid = "5D612CC6-D5A6-4569-8882-FD20BA18465D"
license = false
eula = false

[package.metadata.dist]
formula = "dots"

# The profile that 'cargo-dist' will build with
[profile.dist]
inherits = "release"
codegen-units = 1
lto = "fat"

[dependencies]
anstyle = "1.0.11"
walkdir = "2.5.0"
clap = { version = "4.5.41", features = [
  "derive",
  "wrap_help",
  "unstable-markdown",
] }
clap-verbosity-flag = "3.0.3"
color-eyre = "0.6.5"
commented = "0.2"
easy-ext = "1.0.2"
env_logger = "0.11.8"
etcetera = "0.10.0"
eyre = "0.6.12"
futures = "0.3.31"
handlebars = "6.3.2"
itertools = "0.14.0"
log = "0.4.27"
nutype = "0.6.1"
serde = { version = "1.0.219", features = ["derive"] }
sha256 = "1.6.0"
shellwords = "1.1.0"
simply_colored = "0.1.0"
tap = "1.0.1"
tokio = { version = "1.46.1", features = ["full"] }
toml = "0.9.2"
ureq = "3.0.12"

[dev-dependencies]
bon = "3.6.4"
pretty_assertions = "1.4.1"
tempfile = "3.20.0"
